This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Python 3.5.0a2 installer fails on Windows
Type: Stage: resolved
Components: Installation, Windows Versions: Python 3.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: steve.dower Nosy List: benhoyt, larry, ned.deily, nedbat, paul.moore, python-dev, steve.dower, terry.reedy, tim.golden, vstinner, zach.ware
Priority: critical Keywords:

Created on 2015-03-09 10:23 by paul.moore, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
Installer.zip vstinner, 2015-03-09 13:46
35a2-failures.txt terry.reedy, 2015-03-09 22:26
Messages (27)
msg237630 - (view) Author: Paul Moore (paul.moore) * (Python committer) Date: 2015-03-09 10:23
I just tried to install the 64-bit "full installer" version, for
all users with the default options. This is on a PC that hasn't had
3.5 installed before, and doesn't have Visual Studio 2015 installed.
When it got to the step "precompiling standard library" I got an error window pop up saying "python.exe - system error. The program can't start because api-ms-win-crt-runtime-l1-1-0.dll is missing from your computer. Try reinstalling the program to fix this problem." All there was was an "OK" button. Pressing that told me "Setup was successful" but then "py -3.5 -V" gives me nothing (no error, no version, just returns me to the command prompt). Same result if I do "& 'C:\Program Files\Python 3.5\python.exe' -V".

Python 3.5.0a2 (64-bit) is showing in my "Add/Remove Programs".

This is Windows 7, 64-bit.
msg237631 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2015-03-09 10:32
"""
Two important notes for Windows users about Python 3.5.0a2:

* If you have previously installed Python 3.5.0a1, you must manually uninstall it before installing Python 3.5.0a2 (issue23612).
* If installing Python 3.5.0a2 as a non-privileged user, you may need to escalate to administrator privileges to install an update to your C runtime libraries.
"""
msg237633 - (view) Author: Paul Moore (paul.moore) * (Python committer) Date: 2015-03-09 10:43
In this case as I said, no previous 3.50a1 installed. and I was doing an "all users" install (which prompted me for elevation, and I said OK)
msg237641 - (view) Author: Ben Hoyt (benhoyt) * Date: 2015-03-09 12:25
Same exact issue here. I didn't have a Python 3.5 alpha 1 previously installed, and I tried running the installer normally and also (after uninstalling) with right-click, "Run as administrator".

Both do the same thing for me: pop up a dialog box at the end of installation that says "The program can't start because api-ms-win-crt-runtime-l1-1-0.dll is missing from your computer..."

I also get the same dialog box when I run "C:\Program Files\Python 3.5\python.exe"
msg237642 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 13:07
If you look in your AppData\Local\Temp directory then you should find a whole pile of log files. Zipping those up and posting them here or emailing them to me would be great.

It sounds like the CRT update didn't install, since it's supposed to include that file.
msg237646 - (view) Author: Paul Moore (paul.moore) * (Python committer) Date: 2015-03-09 13:29
Sent via private email as it's a work PC and I didn't check what's logged in there...
msg237649 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2015-03-09 13:46
Same error on my Windows 7 VM. I have VS 2008 & 2010 installed, but also Python 2.7, 3.3 and 3.4 (all installed twice: 32&64 bits). It's not a fresh Windows :-)

Here is a ZIP of Python 3.5* logs in my Temp directory. I cannot compress the whole directory, it's really huge :-) I have files which are 2 years old in this directory!?

Files:
Python 3.5.0a2 (64-bit)_20150309143635.log
Python 3.5.0a2 (64-bit)_20150309143635_001_...log
...
Python 3.5.0a2 (64-bit)_20150309143635_010_...log

Have fun!
msg237651 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 14:15
I definitely don't want the whole directory, especially from Windows 7 :) (Later versions are better at cleaning up unused files)

I'll take a look once I get to work. Thanks
msg237676 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-03-09 17:06
New changeset 0469af231d22 by Steve Dower in branch 'default':
Issue #23619: Ensure C variable is initialized before using it.
https://hg.python.org/cpython/rev/0469af231d22
msg237677 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 17:07
Well that was embarrassing, but it's fixed now :)

Larry, would you like me to rebuild the installer with the fix in it?
msg237690 - (view) Author: Larry Hastings (larry) * (Python committer) Date: 2015-03-09 18:45
Yup.
msg237692 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 19:01
Done, though I may have corrupted alpha 1 in the process :(

New MD5s and sizes:
python-3.5.0a2.exe                  9683ecb837ffa2dd321d564042a90d64    28,762,032
python-3.5.0a2-webinstall.exe       b717713c58d0fcabf69c4fdc67a2e581    885,256
python-3.5.0a2-amd64.exe            5eb089c6c45913480434388341d3ed4a    29,669,240
python-3.5.0a2-amd64-webinstall.exe 93b883552869c3f936cf6799a6212f04    910,840
python350a2.chm                     68007011a878c5cf5f498a3290085066    7,525,910

Any idea how long until the CDN picks up the update?
msg237695 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 19:13
Scratch that, I screwed up the hg dance (multiple times...). Newer bits coming
msg237696 - (view) Author: Larry Hastings (larry) * (Python committer) Date: 2015-03-09 19:29
> Any idea how long until the CDN picks up the update?

curl -X PURGE https://www.python.org/ftp/python/2.7.5/Python-2.7.5.tar.xz

will explicitly tell the CDN to pick up the new binaries.  Not sure if that works from anywhere or just from dl-files.iad1.psf.io .
msg237699 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 19:41
Looks like there'll be some installation errors until the CDN catches up, but the full installer will be fine

MD5s/sizes:

python-3.5.0a2.exe                  807a898a6b61696ab9c4257152a939c5    28,762,312
python-3.5.0a2-webinstall.exe       dc2cebbb402f117f0590c7d11f662129    885,208
python-3.5.0a2-amd64.exe            91771bce1d8993071b5d766920321ca8    29,669,336
python-3.5.0a2-amd64-webinstall.exe 7b057970b302106304e943da2ccc1ead    910,792
python350a2.chm                     68007011a878c5cf5f498a3290085066    7,525,910
msg237700 - (view) Author: Larry Hastings (larry) * (Python committer) Date: 2015-03-09 19:46
Okay, I refreshed the MD5 sums and sizes on the web site, and purged the old files from the CDN.
msg237710 - (view) Author: Terry J. Reedy (terry.reedy) * (Python committer) Date: 2015-03-09 21:43
I downloaded .exe from python.org an hour after Steve said 'done' and install went smoothly -- too smoothly as there was not options dialog as to install location or anything.  Fortunately, it did not grab 'python'.  New crt was first thing installed.

Start menu/3.5 is missing 'uninstall' and 'doc server' icons.

Tests fail for text_ctypes (multiple), test_distutils (multiple), test_compileall, test_tcl (line 237, in testLoadWithUNC), test_tools, test_zipfile, and test_multiprocessing_spawn froze Command Prompt so I has to close with red [  X  ] button.
msg237712 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 21:55
Thanks for the details Terry.

"Customize" is there for all the options, though I too keep being surprised by just how quickly it gets going when you click one of the other two buttons.

The uninstall icon is probably not going to come back :( I spent some time trying to come up with an approach that would work, but there seems to be no way to know what the command should be. (That said, I just had an idea where we could install the installer and then include a link to that, which would allow it to be uninstalled... hmm...)

I think the ctypes and distutils test failures are expected right now (especially if you don't also have VS 2015 CTP 6 installed), but the others sound new. Do you have the output logged you could post and I'll create issues for them?
msg237713 - (view) Author: Paul Moore (paul.moore) * (Python committer) Date: 2015-03-09 22:01
Please don't install the installer somewhere, just to add an uninstall icon on the start menu. It's possible to uninstall via "Add/Remove Programs". That should be sufficient.
msg237717 - (view) Author: Terry J. Reedy (terry.reedy) * (Python committer) Date: 2015-03-09 22:26
If there was a *customize* option in addition to *all users* and *me only*, I did not see it.  I will look harder for a3.  Attached is file with 4 failure messages.
msg237719 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 22:44
Should have been right there with those two options, looking basically the same. Though it's possible that something about your machine is messing with the sizing - high DPI on Windows 7 is notorious for that, and there are sure to be other potential causes too. Whenever you get a chance to try it again, a screenshot would be nice if it's not there.

There's also some chatter about maybe hiding the all users install behind the Customize button, since it really doesn't gain anything for most people. Then there'd only be two buttons on the front screen, which will make it less likely to be missed.

Thanks for the log. Looks mostly like issues I'd expect when you don't have write permissions for the install directory. Not sure that we have any precedent for dealing with tests that require admin privileges when installed but not in the source tree?
msg237720 - (view) Author: Ned Deily (ned.deily) * (Python committer) Date: 2015-03-09 22:55
"Not sure that we have any precedent for dealing with tests that require admin privileges when installed but not in the source tree?"

I think we do.  With the OS X installer (and, in theory, other Posix-style installs), we have a similar situation where tests are installed without a source tree and I believe they should be expected to be runnable by the user without admin privileges, where necessary, skipping those few test cases that *might* actually need elevated privs.  Granted, we currently don't do a lot of systematic testing of tests from installed locations.  I do as part of the OS X installer building and testing.
msg237721 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-09 23:08
Do those assume that no-admin privs will cause a failure? This is more an issue of "do I have write permissions for the install directory" (which I guess could be its own skip condition...).
msg237723 - (view) Author: Ned Deily (ned.deily) * (Python committer) Date: 2015-03-09 23:35
Regarding tests trying to write into the install directory tree, I'm pretty sure that there have been fixes added for those but I can't recall off the top of my head specific examples.  I think the best approach is to use a temporary, writable directory instead; if that's not practical, then the test case should be skipped.  I support fixing any tests that still currently fail due to this.
msg239226 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-03-25 06:42
Migrated the test failures to #23774 and closing this.
msg256989 - (view) Author: Ned Batchelder (nedbat) * (Python triager) Date: 2015-12-25 13:08
I tried to install 3.5.1 32-bit into a fresh virtualbox image from https://dev.windows.com/en-us/microsoft-edge/tools/vms/mac/ (IE 10 on Win 7), and got this same error message.  Python will not run, it only shows:

                    ---------------------------
                    python.exe - System Error
                    ---------------------------
                    The program can't start because api-ms-win-crt-runtime-l1-1-0.dll is missing from your computer. Try reinstalling the program to fix this problem. 
                    ---------------------------
                    OK   
                    ---------------------------

I tried repairing the installation (with the control panel), which did not help.
msg257012 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2015-12-25 20:38
Do you have the log files from your %TEMP% directory still? I'll need to see the ones from the original install, not the repair, but you can just bundle them all up.

Create a new issue too - this one is resolved.
History
Date User Action Args
2022-04-11 14:58:13adminsetgithub: 67807
2015-12-25 20:38:35steve.dowersetmessages: + msg257012
2015-12-25 13:08:13nedbatsetnosy: + nedbat
messages: + msg256989
2015-03-25 06:42:14steve.dowersetstatus: open -> closed
resolution: fixed
messages: + msg239226

stage: resolved
2015-03-09 23:35:20ned.deilysetmessages: + msg237723
2015-03-09 23:08:43steve.dowersetmessages: + msg237721
2015-03-09 22:55:16ned.deilysetnosy: + ned.deily
messages: + msg237720
2015-03-09 22:44:41steve.dowersetmessages: + msg237719
2015-03-09 22:26:15terry.reedysetfiles: + 35a2-failures.txt

messages: + msg237717
2015-03-09 22:01:57paul.mooresetmessages: + msg237713
2015-03-09 21:55:48steve.dowersetmessages: + msg237712
2015-03-09 21:43:45terry.reedysetnosy: + terry.reedy
messages: + msg237710
2015-03-09 19:46:18larrysetmessages: + msg237700
2015-03-09 19:41:24steve.dowersetmessages: + msg237699
2015-03-09 19:29:54larrysetmessages: + msg237696
2015-03-09 19:13:58steve.dowersetmessages: + msg237695
2015-03-09 19:01:07steve.dowersetmessages: + msg237692
2015-03-09 18:45:40larrysetmessages: + msg237690
2015-03-09 17:07:09steve.dowersetnosy: + larry
messages: + msg237677
2015-03-09 17:06:18python-devsetnosy: + python-dev
messages: + msg237676
2015-03-09 14:15:57steve.dowersetmessages: + msg237651
2015-03-09 13:46:46vstinnersetfiles: + Installer.zip

messages: + msg237649
title: Python 3.5.0a2 installer fails -> Python 3.5.0a2 installer fails on Windows
2015-03-09 13:29:53paul.mooresetmessages: + msg237646
2015-03-09 13:07:14steve.dowersetmessages: + msg237642
2015-03-09 12:25:08benhoytsetnosy: + benhoyt
messages: + msg237641
2015-03-09 10:43:16paul.mooresetmessages: + msg237633
2015-03-09 10:32:19vstinnersetnosy: + vstinner
messages: + msg237631
2015-03-09 10:23:37paul.moorecreate