Issue #23619: Ensure C variable is initialized before using it. The garbage in _crtInstalledToken was causing the IsCrtInstalled() function to return TRUE without actually checking anything. We now initialize the variable first.